adição dos arquivos de modelagem

--- a/README
+++ b/README
@@ -66,5 +66,5 @@ Ex: http://localhost:8000/api/ajuda_custo/1
 http://localhost:8000/api/edital
 
 
-
+Os arquivos de modelagem estão na pasta docs.
 
